# serde_vdf

./: Cargo.toml  README.md
examples/: test.rs
src/: de.rs  error.rs  lexer.rs  lib.rs  ser.rs
src/io/: core.rs
