[package]
name = "vdf"
version = "0.1.0"
authors = ["Kira"]
categories = ["encoding", "parser-implementations"]
description = "A VDF parser"
documentation = "https://docs.rs/vdf"
edition = "2021"
keywords = ["vdf"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KiraCoding/vdf"

[dependencies]
logos = "0.14.0"

